--- a/extraW1.html
+++ b/extraW1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Corso Web Developer - Epicode schoo</title>
     <link rel="stylesheet" href="assets/reset.css" />
     <link
       rel="stylesheet"
@@ -12,13 +12,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="extraweek1.css" />
+    <link rel="stylesheet" href="assets/extraweek1.css" />
   </head>
   <body>
     <header>
-      <div id="logo">
-        <img src="assets/img/logo.png" alt="logo" />
-      </div>
+      <div id="logo"><img src="assets/img/logo.png"logo" /></div>
       <div id="header-text">
         <h1>Corso Web Developer</h1>
         <h2>
